--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 #must be separately installed:
 numpy==1.9.0
 nibabel==1.3.0
+pyyaml==3.11
+nipy==0.3.0
+git+https://www.github.com/neurita/boyle.git
